<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_finish">完成</string>
    <string name="ssdk_oks_list_friends">%s的朋友</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_select_a_friend">请选择一个朋友</string>
    <string name="ssdk_oks_select_one_plat_at_least">请选择一个目标平台</string>
    <string name="ssdk_oks_shake2share">摇晃手机！</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_share_to">分享到</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="Files">Files</string>
    <string name="Image">Image</string>
    <string name="Thumbnail">Thumbnail</string>
    <string name="Video">Video</string>
    <string name="add">添加</string>
    <string name="add_hide_info">添加隐藏信息</string>
    <string name="add_hide_out_limit">不能再添加更多的隐藏信息了</string>
    <string name="add_hide_tips">在图片上点击添加文字、语音，长按删除</string>
    <string name="add_hide_tips_text_null">请输入隐藏的文字，20字以内</string>
    <string name="add_image_text">添加图片描述</string>
    <string name="adjust_background">调整背景</string>
    <string name="adjust_foreground">调整前景</string>
    <string name="again">再拍一张</string>
    <string name="app_name">拍拍360</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_play_start">播放</string>
    <string name="auto_play_stop">停止</string>
    <string name="back">返回</string>
    <string name="back_index">返回首页</string>
    <string name="ble_connect_success">连接成功</string>
    <string name="ble_not_supported">设备不支持蓝牙</string>
    <string name="ble_reconnect">请重新连接蓝牙</string>
    <string name="cancel">取消</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_code_error_tip">验证码不正确，请重新输入。</string>
    <string name="check_code_format_error_tip">请输入正确的验证码。</string>
    <string name="check_code_send_fail_tip">验证码发送失败，请重新发送。</string>
    <string name="check_code_send_success_tip">验证码发送成功，请注意查收。</string>
    <string name="check_template_tips">请选择模板</string>
    <string name="comment_button_text">评论</string>
    <string name="comment_edit">写评论</string>
    <string name="comment_edit_input">请输入评论</string>
    <string name="comment_edit_pubsh">发表</string>
    <string name="confirm">确认</string>
    <string name="connected">已连接</string>
    <string name="current_device">当前设备</string>
    <string name="define_roundedimageview" />
    <string name="disconnected">未连接</string>
    <string name="do_connect">点击连接</string>
    <string name="done">完成</string>
    <string name="edit_text">编辑</string>
    <string name="exit_login">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_check_code">发送验证码</string>
    <string name="forget_password_check_code_tip">输入验证码</string>
    <string name="forget_password_first_title">找回密码1/3</string>
    <string name="forget_password_phone_tip">输入注册时的手机号</string>
    <string name="forget_password_sec_title">找回密码2/3</string>
    <string name="forget_password_third_title">找回密码3/3</string>
    <string name="get_check_code">发送验证码</string>
    <string name="in_head_photo">植入头像</string>
    <string name="input_image_text">输入图片描述······</string>
    <string name="input_new_pwd_tip">输入新密码</string>
    <string name="insert_music">插入音乐</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="listfooterview_normal" />
    <string name="listfooterview_ready" />
    <string name="location">位置</string>
    <string name="login_name_tip">输入手机号/用户名</string>
    <string name="login_now">现在登录</string>
    <string name="login_password_tip">输入密码</string>
    <string name="login_title">登录</string>
    <string name="making">正在制作</string>
    <string name="my_comment">我的评论</string>
    <string name="my_comment_delete_fail_tip">我的评论删除失败。</string>
    <string name="my_comment_delete_success_tip">我的评论删除成功。</string>
    <string name="my_comment_fail_tip">获取我的评论出错，请稍后重试。</string>
    <string name="my_device">我的设备</string>
    <string name="next_step">下一步</string>
    <string name="other_device">可用设备</string>
    <string name="phone_format_error_tip">请输入正确的手机号码。</string>
    <string name="phone_num_repeat_tip">手机号已经注册。</string>
    <string name="publish">发布</string>
    <string name="pwd_blank_tip">密码不能为空，请重新输入。</string>
    <string name="pwd_different_tip">两次输入的密码不相同，请重新输入。</string>
    <string name="pwd_less_tip">密码少于6位，请重新输入。</string>
    <string name="qq_name">QQ</string>
    <string name="register">现在注册</string>
    <string name="register_check_code_tip">输入验证码</string>
    <string name="register_name_tip">输入手机号</string>
    <string name="register_title">注册</string>
    <string name="related_title">关于</string>
    <string name="reset_pwd_fail_tip">密码重置失败，请重新尝试。</string>
    <string name="reset_pwd_success_tip">密码重置成功</string>
    <string name="save_share">保存分享</string>
    <string name="save_success">保存成功</string>
    <string name="set_pwd">输入密码</string>
    <string name="set_pwd_tips_one">输入6—18位密码</string>
    <string name="set_username">设置用户名</string>
    <string name="share_success">分享成功</string>
    <string name="third_login">第三方登录</string>
    <string name="verify_new_pwd_tip">确认新密码</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
</resources>