<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@mipmap/bg_login" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/app_title"/>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/login_hor_margin" android:paddingRight="@dimen/login_hor_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/title_main_text_size" android:textColor="@color/text_color_main_light" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_top_margin" android:text="@string/login_title"/>
        <EditText android:textColor="@color/text_color_main_light" android:textColorHint="@color/text_color_main_light" android:id="@+id/edit_login_username" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/horizontal_margin" android:layout_marginTop="@dimen/title_height" android:layout_marginRight="@dimen/horizontal_margin" android:hint="@string/login_name_tip" android:singleLine="true" android:drawableLeft="@mipmap/login_phone" android:drawablePadding="@dimen/fab_margin"/>
        <View android:background="@color/bg_white" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="@dimen/vertical_margin_little"/>
        <EditText android:textColor="@color/text_color_main_light" android:textColorHint="@color/text_color_main_light" android:id="@+id/edit_login_password" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/horizontal_margin" android:layout_marginTop="@dimen/login_layout_divider" android:layout_marginRight="@dimen/horizontal_margin" android:hint="@string/login_password_tip" android:password="true" android:singleLine="true" android:maxLength="@integer/pwd_max_length" android:drawableLeft="@mipmap/login_password" android:drawablePadding="@dimen/fab_margin"/>
        <View android:background="@color/bg_white" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="@dimen/vertical_margin_little"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_main_little" android:textColor="@color/text_color_main_light" android:id="@+id/tv_forget_pwd" android:paddingTop="@dimen/vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forget_password" android:layout_alignParentRight="true" android:onClick="onForgetPasswordClick"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/login_hor_margin" android:paddingRight="@dimen/login_hor_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_layout_divider">
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:background="@drawable/shape_btn_login" android:layout_width="match_parent" android:layout_height="@dimen/title_height" android:text="@string/login_title" android:onClick="onLoginClick"/>
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:background="@drawable/shape_btn_login" android:layout_width="match_parent" android:layout_height="@dimen/title_height" android:layout_marginTop="@dimen/vertical_margin" android:text="@string/register" android:onClick="onRegisterClick"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/login_hor_margin_little" android:paddingRight="@dimen/login_hor_margin_little" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_layout_divider">
        <TextView android:layout_gravity="center" android:background="@color/text_color_main_light" android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
        <TextView android:textColor="@color/text_color_main_light" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/left_menu_icon_size" android:layout_marginRight="@dimen/left_menu_icon_size" android:text="@string/third_login"/>
        <TextView android:layout_gravity="center" android:background="@color/text_color_main_light" android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="@dimen/login_hor_margin" android:paddingRight="@dimen/login_hor_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_layout_divider">
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:layout_gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/weixin" android:drawableTop="@mipmap/login_weixin" android:drawablePadding="@dimen/horizontal_margin" android:layout_weight="1" android:onClick="onWXLoginClick"/>
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:layout_gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/qq_name" android:drawableTop="@mipmap/login_qq" android:drawablePadding="@dimen/horizontal_margin" android:layout_weight="1" android:onClick="onQQLoginClick"/>
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:layout_gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/weibo" android:drawableTop="@mipmap/login_weibo" android:drawablePadding="@dimen/horizontal_margin" android:layout_weight="1" android:onClick="onSinaLoginClick"/>
    </LinearLayout>
</LinearLayout>
