<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@mipmap/bg_login" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/app_title"/>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/login_hor_margin" android:paddingRight="@dimen/login_hor_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/title_main_text_size" android:textColor="@color/text_color_main_light" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_top_margin" android:text=""/>
        <EditText android:textColor="@color/text_color_main_light" android:textColorHint="@color/text_color_main_light" android:id="@+id/et_forget_pwd_tel" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/horizontal_margin" android:layout_marginTop="@dimen/title_height" android:layout_marginRight="@dimen/horizontal_margin" android:hint="@string/forget_password_phone_tip" android:singleLine="true" android:drawableLeft="@mipmap/login_phone" android:drawablePadding="@dimen/fab_margin" android:inputType="number"/>
        <View android:background="@color/bg_white" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="@dimen/vertical_margin_little"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_layout_divider">
            <EditText android:textColor="@color/text_color_main_light" android:textColorHint="@color/text_color_main_light" android:id="@+id/et_check_code" android:background="@null" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/horizontal_margin" android:layout_marginRight="@dimen/horizontal_margin" android:hint="@string/forget_password_check_code_tip" android:singleLine="true" android:maxLength="@integer/check_code_max_length" android:drawableLeft="@mipmap/checkcode" android:drawablePadding="@dimen/fab_margin" android:layout_weight="1" android:inputType="number"/>
            <TextView android:textColor="@color/text_color_main_light" android:id="@+id/tv_send_check_code" android:background="@drawable/shape_btn_login" android:paddingLeft="@dimen/horizontal_margin" android:paddingTop="@dimen/vertical_margin_little" android:paddingRight="@dimen/horizontal_margin" android:paddingBottom="@dimen/vertical_margin_little" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_check_code"/>
        </LinearLayout>
        <View android:background="@color/bg_white" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="@dimen/vertical_margin_little"/>
        <TextView android:textColor="@color/text_color_main_light" android:gravity="center" android:id="@+id/tv_next_step" android:background="@drawable/shape_btn_login" android:layout_width="match_parent" android:layout_height="@dimen/title_height" android:layout_marginTop="@dimen/title_height" android:text="@string/next_step" android:onClick="nextStep"/>
    </LinearLayout>
</LinearLayout>
